deploy/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deuce
  annotations:
    # Send traffic straight to pod IPs instead of hopping via a node port.
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: deuce
  ports:
    - port: 80
      targetPort: http
