deploy/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deuce
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: deuce-ip
    networking.gke.io/managed-certificates: deuce
spec:
  defaultBackend:
    service:
      name: deuce
      port:
        number: 80
